--- a/css/style.css
+++ b/css/style.css
@@ -26,17 +26,16 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 .header__form {
   position: relative;
 }
 .header__form .form__input {
-  border: none;
+  border: 2px solid #E7E7E7;
   font-size: 1rem;
   padding: 1.8em;
-  background-color: #E7E7E7;
   color: #000;
 }
 .header__form .form__icon {
@@ -124,6 +123,12 @@ body {
 .recipe-card {
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.3s;
+}
+.recipe-card:hover {
+  transform: scale(1.02);
 }
 .recipe-card__img-container {
   height: 180px;
@@ -135,7 +140,6 @@ body {
   height: 220px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  background-color: #E7E7E7;
   padding: 1em;
   display: grid;
   grid-gap: 20px 10px;
@@ -146,6 +150,7 @@ body {
   grid-area: title;
   font-size: 1rem;
   align-self: baseline;
+  font-weight: bold;
 }
 .recipe-card__text-container .recipe-time {
   grid-area: time;
@@ -174,6 +179,12 @@ body {
   text-overflow: ellipsis;
   font-size: 0.7rem;
   line-height: 1.2;
+}
+
+.page-container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .header {
@@ -240,7 +251,7 @@ body {
 
 #grid {
   margin-top: 4em;
-  max-width: 1110px;
+  max-width: 1440px;
   position: absolute;
   top: 270px;
   display: grid;
